Align styles event listener with tiles event listener, add check to ensure default style is first supported style

--- a/assets/css/gokoala.css
+++ b/assets/css/gokoala.css
@@ -49,11 +49,3 @@ td {
 .table-sm>:not(caption)>*>*  {
     padding: 0.10rem;
 }
-
-/* toggles */
-.toggle-content {
-    display: none;
-}
-.toggle-content.is-visible {
-    display: table-row;
-}
